k8s/apps/_retired/tiny-tiny-rss/resources/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment

spec:
  replicas: 1
  selector:
    matchLabels:
      app: default
  template:
    metadata:
      labels:
        app: default
    spec:
      containers:
        - name: app
          image: cthulhoo/ttrss-fpm-pgsql-static:latest@sha256:ef867182f55c1218ce2889df7da31a801b0f7ff170974d1536c95c1d89d3e86c
          ports:
            - containerPort: 9000
          volumeMounts:
            - name: app
              mountPath: /var/www/html
            - name: config
              mountPath: /opt/tt-rss/config.d
              readOnly: true
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            readOnlyRootFilesystem: true
        - name: backups
          image: cthulhoo/ttrss-fpm-pgsql-static:latest@sha256:ef867182f55c1218ce2889df7da31a801b0f7ff170974d1536c95c1d89d3e86c
          args:
            - /opt/tt-rss/dcron.sh
            - -f
          volumeMounts:
            - name: app
              mountPath: /var/www/html
            - name: backups
              mountPath: /backups
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            readOnlyRootFilesystem: true
        - name: db
          image: public.ecr.aws/docker/library/postgres:17.5-bullseye@sha256:724a6dfcc90fb6b2eb7caa062c7c852fe60fc30727896a044f4d478f423f183f
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: db
              mountPath: /var/lib/postgresql/data
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            readOnlyRootFilesystem: true
        - name: updater
          image: cthulhoo/ttrss-fpm-pgsql-static:latest@sha256:ef867182f55c1218ce2889df7da31a801b0f7ff170974d1536c95c1d89d3e86c
          args:
            - /opt/tt-rss/updater.sh
          volumeMounts:
            - name: app
              mountPath: /var/www/html
            - name: config
              mountPath: /opt/tt-rss/config.d
              readOnly: true
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            readOnlyRootFilesystem: true
        - name: web-nginx
          image: cthulhoo/ttrss-web-nginx:latest@sha256:c064fc0e5865f81d2c4e244768488eabaa1340a9f2b6119aaf239df300095bf0
          volumeMounts:
            - name: app
              mountPath: /var/www/html
              readOnly: true
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            readOnlyRootFilesystem: true
      volumes:
        - name: app
          hostPath:
            path: /mnt/local/tiny-tiny-rss/app
            type: DirectoryOrCreate
        - name: backups
          hostPath:
            path: /mnt/local/tiny-tiny-rss/backups
            type: DirectoryOrCreate
        - name: config
          hostPath:
            path: /mnt/local/tiny-tiny-rss/config
            type: DirectoryOrCreate
        - name: db
          hostPath:
            path: /mnt/local/tiny-tiny-rss/db
            type: DirectoryOrCreate
      restartPolicy: Always
      securityContext:
        seccompProfile:
          type: RuntimeDefault
