k8s/apps/_retired/tiny-tiny-rss/resources/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app

spec:
  selector:
    app: default
  ports:
    - name: "80"
      port: 80
      targetPort: 80
      protocol: TCP
    - name: "9000"
      port: 9000
      targetPort: 9000
      protocol: TCP

---
apiVersion: v1
kind: Service
metadata:
  name: db

spec:
  selector:
    app: default
  ports:
    - name: "5432"
      port: 5432
      targetPort: 5432
      protocol: TCP
